Añadimos los archivos que contienen las traducciones en la carpeta dart_tool/flutter_gen/gen_l10n Actualizados los comentarios de los diferentes archivos Añadida la opción de recarga la pantalla de Nuevousuario Creada la clase AvisoAccion que añade el botón de recarga de la página NuevoUsuario y el botón recarga o crear empresa si no hay empresas en la BBDD

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -5,6 +5,7 @@
 
     
     "acceso": "Login",
+    "anyadeEmpresa": "Add company",
     "aviso": "Warning",
 
     "cargando": "Loading",
@@ -21,6 +22,7 @@
     "dimeElCodigoDeFiltro": "Filter code:",
 
     "empresa": "Company",
+    "empresaNueva": "New company",
     "empresaCreadaCorrectamente": "Company set up ok",
     "errNoEspecificado": "Unspecified error: ",
     "escogeOpcionParaCrear": "Choose option to create.",
@@ -42,10 +44,11 @@
 
     "jefeDeArea": "Area manager",
 
+    "nohayEmpresasenlaBBDD": "There are no companies in the database",
     "nombreDeLaEmpresa": "Company name:",
     "nombreDelUsuario": "User name:",
     "noSeEncuentraEmpresasDadeAlta": "No companies are found in the DB.\nFirst, register a new company.",
-    "nuevaEmpresa": "New company",
+    "nuevaEmpresa": "Company new",
     "nuevoUsuario": "New user",
     "numeroDeCodigo": "Code number:",
 
@@ -53,7 +56,8 @@
     
     "pdv": "POS",
     "primerRellenaCampos": "First complete the fields",
-
+    
+    "recarga": "Recharge",
     "ruta": "Route",
 
 
