--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -6,6 +6,7 @@
     
     "acceso": "Login",
     "anyadeEmpresa": "Add company",
+    "atras": "Back",
     "aviso": "Warning",
 
     "cargando": "Loading",
