--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
@@ -6,6 +6,7 @@
   
     "acceso": "Acceso",
     "anyadeEmpresa": "Añade empresa",
+    "atras": "Atrás",
     "aviso": "Aviso",
 
     "cargando": "Cargando",
