--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
@@ -6,6 +6,7 @@
 
   "acceso": "Accès",
   "anyadeEmpresa": "Ajouter une compagnie",
+  "atras": "Arrière",
   "aviso": "Avis",
 
   "cargando": "Chargement",
