Añadido widget SingleChildScrollView en muestradialogo y en NuevoUsuario Traducciones realizadas

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -58,7 +58,7 @@
     "pdv": "POS",
     "primerRellenaCampos": "First complete the fields",
     
-    "recarga": "Recharge",
+    "recarga": "Reload",
     "ruta": "Route",
 
 
