--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
@@ -57,6 +57,7 @@
   "pdv": "PDV",
   "primerRellenaCampos": "Remplir d'abord les champs",
 
+  "recarga": "Recharge",
   "ruta": "Route",
 
   "selecionaEmpresa": "Sélectionner le entreprise",
