SQL, actualizada la función crear empresa para ñadir la contraseña autogenerada Cambiado el nombre del archivo creación_empre_usua.dart a escoge_opciones.dart Flutter,  extraída la función de añadir usuario y empresa a la funcion anyade en el archivo ./servidor/anyade.dart
Actualizada la interfaz de nueva empresa.

Traducciones nuevos textos de empresa y usuario registrados y sesión activa

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -5,6 +5,7 @@
 
     
     "acceso": "Login",
+    "anyade": "Add",
     "anyadeEmpresa": "Add company",
     "atras": "Back",
     "autoGenerada": "Auto-generated",
@@ -30,7 +31,7 @@
     "empresaNueva": "New company",
     "empresaCreadaCorrectamente": "Company set up ok",
     "errNoEspecificado": "Unspecified error{error}",
-    "escogeOpcionParaCrear": "Choose option to create.",
+    "escogeOpcion": "Choose option",
     "esperandoAlServidor": "Waiting for server",
     "esperandoRespuestaServidor": "Waiting for server response.",
     "esteCampoNoPuedeEstarVacio": "This field cannot be empty!",
@@ -50,6 +51,9 @@
     "introduceLaContrasena": "Introduce your contraseña",
 
     "jefeDeArea": "Area manager",
+
+    "laEmpresaHaSidoDadoDeAlta": "The enterprise {empresa} has been added",
+    "laEmpresaYaEstaregistrada": "The enterprise {empresa} is already registered",
 
     "nohayEmpresasenlaBBDD": "There are no companies in the database",
     "nombre": "Name",
@@ -74,6 +78,7 @@
     "seleccionaFiltro": "Select filter: ",
     "seleccionaFiltroUsuario": "Select user filter",
     "servidorNoDisponible": "Server not available",
+    "sesionActiva": "Active session",
     "siguiente": "Next",
 
     "usuario": "User",
@@ -83,7 +88,7 @@
     
     "valorInvalidoEnEsteCampo":"Invalid value in this field!",
     
-    "codErrorLogin401": "Wrong authentication",
+    "codError401": "Wrong authentication",
     "codErrorLogin404": "User not found",
-    "codErrorLogin500": "Server error"
+    "codError500": "Server error"
 }
