Creada la funcion  noEstoyAutenticado que redirige a la pantalla login Creadas las variable estáticas de códigos de respuestas de servidor

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -16,6 +16,8 @@
     "cargandoUsuario": "Loading User",
     "centro": "Centre",
     "centroPadre": "Parent centre",
+    "cerrandoSesion":"Logging out",
+    "cerrarSesion":"Log out",
     "comprobandoDatos": "Checking data",
     "contrasena": "Password",
     "contrasenaAutogenerada": "Auto-generated password",
