--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
@@ -16,6 +16,8 @@
     "cargandoUsuario": "Cargando Usuario",
     "centro": "Centro",
     "centroPadre": "Centro Padre",
+    "cerrandoSesion":"Cerrando sesión",
+    "cerrarSesion":"Cerrar sesión",
     "comprobandoDatos": "Comprobando datos",
     "contrasena": "Contraseña",
 
