--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
@@ -16,6 +16,8 @@
   "cargandoUsuario": "Chargement utilisateur",
   "centro": "Centre",
   "centroPadre": "Centre de Base",
+  "cerrandoSesion":"Fermeture de session",
+  "cerrarSesion":"Fermer la session",
   "comprobandoDatos": "Vérification des données",
   "contrasena": "Mot de passe",
   "contrasenaAutogenerada": "Mot de passe auto-généré",
