Actualizaciones modulso servidor cliente

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -79,7 +79,7 @@
     "selecionaEmpresa": "Select company",
     "seleccionaFiltro": "Select filter: ",
     "seleccionaFiltroUsuario": "Select user filter",
-    "seleccionaLenguage": "Select Language",
+    "seleccionaIdioma": "Select Language",
     "servidorNoDisponible": "Server not available",
     "sesionActiva": "Active session",
     "siguiente": "Next",
