Actualizando Menu lateral

--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_en.arb
@@ -19,6 +19,7 @@
     "cerrandoSesion":"Logging out",
     "cerrarSesion":"Log out",
     "comprobandoDatos": "Checking data",
+    "configuracion": "Set up",
     "contrasena": "Password",
     "contrasenaAutogenerada": "Auto-generated password",
     "crea": "Create: ",
