--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_es.arb
@@ -19,6 +19,7 @@
     "cerrandoSesion":"Cerrando sesión",
     "cerrarSesion":"Cerrar sesión",
     "comprobandoDatos": "Comprobando datos",
+    "configuracion": "Configuración",
     "contrasena": "Contraseña",
 
     "contrasenaAutogenerada": "Contraseña autogenerada",
