--- a/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
+++ b/PrimeraAplicacion/crea_empresa_usario_multi_idioma/lib/l10n/app_fr.arb
@@ -19,6 +19,7 @@
   "cerrandoSesion":"Fermeture de session",
   "cerrarSesion":"Fermer la session",
   "comprobandoDatos": "Vérification des données",
+  "configuracion": "Paramètre",
   "contrasena": "Mot de passe",
   "contrasenaAutogenerada": "Mot de passe auto-généré",
   "crea": "Crée :",
